--- a/deploy/roles/mongodb/tasks/main.yml
+++ b/deploy/roles/mongodb/tasks/main.yml
@@ -12,6 +12,13 @@
     apt: name={{ item }} state=present
     with_items:
     - mongodb-org
+    when: ansible_os_family == 'Debian'
+
+  - name: Install the mongodb package
+    apt: name={{ item }} state=present
+    with_items:
+    - mongodb-org
+    when: ansible_os_family == 'RedHat'
 
   - name: create data directory for mongodb
     file: path={{ mongodb_datadir_prefix }}/portal state=directory owner=mongod group=mongod
