--- a/deploy/roles/mongodb/tasks/main.yml
+++ b/deploy/roles/mongodb/tasks/main.yml
@@ -4,9 +4,11 @@
 
   - name: Add public key
     apt_key: keyserver=keyserver.ubuntu.com id=7F0CEB10
+    when: ansible_os_family == 'Debian'
 
   - name: Add Repository
     apt_repository: repo='deb http://repo.mongodb.org/apt/ubuntu/ trusty/mongodb-org/3.0 multiverse' state=present
+    when: ansible_os_family == 'Debian'
 
   - name: Install the mongodb package
     apt: name={{ item }} state=present
