--- a/deploy/roles/mongodb/tasks/main.yml
+++ b/deploy/roles/mongodb/tasks/main.yml
@@ -2,27 +2,11 @@
   - name: Create the mongod user
     user: name=mongod comment="MongoD"
 
-  - name: Add public key
-    apt_key: keyserver=keyserver.ubuntu.com id=7F0CEB10
-
-  - name: Add Repository
-    apt_repository: repo='deb http://repo.mongodb.org/apt/ubuntu/ trusty/mongodb-org/3.0 multiverse' state=present
-    when: ansible_os_family == 'Debian'
-
-  - name: Install the mongodb package
-    apt: name={{ item }} state=present
-    with_items:
-    - mongodb-org
-    when: ansible_os_family == 'Debian'
-
-  - name: RedHat | Add source sources
-    template: src=mongodb.repo.j2 dest=/etc/yum.repos.d/mongodb.repo
+  - include: mongo-redhat.yml
     when: ansible_os_family == 'RedHat'
 
-  - name: RedHat | Install Packages
-    yum: name={{ item }} state=installed
-    with_items: mongodb_packages
-    when: ansible_os_family == 'RedHat'
+  - include: mongo-debian.yml
+    when: ansible_os_family == 'Debian'
 
   - name: create data directory for mongodb
     file: path={{ mongodb_datadir_prefix }}/portal state=directory owner=mongod group=mongod
