--- a/deploy/roles/mongodb/tasks/mongo-redhat.yml
+++ b/deploy/roles/mongodb/tasks/mongo-redhat.yml
@@ -1,6 +1,6 @@
 ---
   - name: RedHat | Add source sources
-    template: src=mongodb.repo.j2 dest=/etc/yum.repos.d/mongodb.repo
+    template: src=mongodb.repo dest=/etc/yum.repos.d/mongodb.repo
 
   - name: RedHat | Install Packages
     yum: name={{ item }} state=installed
