--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -13,6 +13,8 @@
       - node
       - npm
       - git
+      - python
+      - libselinux-python
     when: ansible_os_family == 'RedHat'
 
   - name: Create group
