--- a/deploy/roles/mongodb/tasks/mongo-redhat.yml
+++ b/deploy/roles/mongodb/tasks/mongo-redhat.yml
@@ -1,4 +1,11 @@
 ---
+  - name: Execute yum install
+    yum: name={{item}} state=present
+    with_items : 
+      - python
+      - libselinux-python
+    when: ansible_os_family == 'RedHat'
+
   - name: RedHat | Add source sources
     template: src=mongodb.repo dest=/etc/yum.repos.d/mongodb.repo
 
