--- a/deploy/roles/mongodb/tasks/mongo-redhat.yml
+++ b/deploy/roles/mongodb/tasks/mongo-redhat.yml
@@ -7,7 +7,7 @@
     when: ansible_os_family == 'RedHat'
 
   - name: RedHat | Add source sources
-    template: src=mongodb.repo dest=/etc/yum.repos.d/mongodb.repo
+    template: src=mongodb.repo dest=/etc/yum.repos.d/mongodb-org-3.0.repo
 
   - name: RedHat | Install Packages
     yum: name={{ item }} state=installed
