--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -10,7 +10,7 @@
   - name: Execute yum install
     yum: name={{item}} state=present
     with_items : 
-      - node
+      - nodejs
       - npm
       - git
       - python
