--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -7,6 +7,9 @@
       - git
     when: ansible_os_family == 'Debian'
 
+  - name: Add Repo for RedHat
+    command: curl -sL https://rpm.nodesource.com/setup | bash -
+
   - name: Execute yum install
     yum: name={{item}} state=present
     with_items : 
