--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -7,11 +7,8 @@
       - git
     when: ansible_os_family == 'Debian'
 
-  - name: Add Repo for RedHat
-    command: "sudo curl -sL https://rpm.nodesource.com/setup | bash -"
-
   - name: Execute yum install
-    yum: name={{item}} state=present
+    yum: name={{item}} state=present enablerepo=epel
     with_items : 
       - nodejs
       - npm
