--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -7,6 +7,18 @@
       - git
     when: ansible_os_family == 'Debian'
 
+  - name: Install EPEL repo.
+    yum:
+      name: "{{ epel_repo_url }}"
+      state: present
+    when: ansible_os_family == 'RedHat'
+
+  - name: Import EPEL GPG key.
+    rpm_key:
+      key: "{{ epel_repo_gpg_key_url }}"
+      state: present
+    when: ansible_os_family == 'RedHat'
+
   - name: Execute yum install
     yum: name={{item}} state=present enablerepo=epel
     with_items : 
