--- a/deploy/roles/web/templates/portal.conf
+++ b/deploy/roles/web/templates/portal.conf
@@ -12,15 +12,15 @@ script
   touch /var/log/nodejs-{{env}}.log
   chown {{user}}:{{group}} /var/log/nodejs-{{env}}.log
   # recommended approach in case of su/sudo usage so that service does not fork
-  exec sudo -u {{user}} NODE_ENV={{env}} /usr/bin/nodejs {{basedir}}{{project_name}}/{{appfile}} >> /var/log/nodejs-{{env}}.log 2>&1
+  exec sudo -u {{user}} NODE_ENV={{env}} /usr/bin/node {{basedir}}{{project_name}}/{{appfile}} >> /var/log/node-{{env}}.log 2>&1
 
 end script
  
 pre-start script
-    echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> /var/log/nodejs-{{env}}.log
+    echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Starting" >> /var/log/node-{{env}}.log
 
 end script 
 
 post-stop script
-    echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Stopping" >> /var/log/nodejs-{{env}}.log
+    echo "[`date -u +%Y-%m-%dT%T.%3NZ`] (sys) Stopping" >> /var/log/node-{{env}}.log
 end script
