Added init.d for node

--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -50,6 +50,11 @@
     npm: path={{basedir}}{{project_name}}
   - name: Add upstart conf
     template: src=portal.conf dest=/etc/init/portal.conf
+    when: ansible_os_family == 'Debian'
+  - name: Add init.d conf
+    template: src=portal_redhat.service dest=/etc/init.d/portal
+    when: ansible_os_family == 'RedHat'
+
   - name: Add env specific migrations
     template: src=0021_addUserImages.js dest=/var/www/portal/migrations/0021_addUserImages.js
   - name: Run migrations down
