--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -1,4 +1,7 @@
 ---    
+  - name: Stop Application
+    service: name=portal state=stopped
+
   - name: Execute apt-get
     apt: name={{item}} state=present
     with_items : 
