--- a/deploy/roles/web/templates/portal_redhat.service
+++ b/deploy/roles/web/templates/portal_redhat.service
@@ -21,8 +21,7 @@ do_start()
 {
         if [ ! -f "$LOCK_FILE" ] ; then
                 echo -n $"Starting $SERVER: "
-                cd $ROOT_DIR
-                runuser -l "$USER" -c "NODE_ENV={{env}} $DAEMON $SERVER >> $LOG_FILE &" && echo_success || echo_failure
+                runuser -l "$USER" -c "cd $ROOT_DIR && NODE_ENV={{env}} $DAEMON $SERVER >> $LOG_FILE &" && echo_success || echo_failure
                 RETVAL=$?
                 echo
                 [ $RETVAL -eq 0 ] && touch $LOCK_FILE
