Ignore if portal service isn;t running

--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -1,6 +1,7 @@
 ---    
   - name: Stop Application
     service: name=portal state=stopped
+    ignore_errors: no
 
   - name: Execute apt-get
     apt: name={{item}} state=present
