--- a/deploy/roles/web/tasks/main.yml
+++ b/deploy/roles/web/tasks/main.yml
@@ -1,7 +1,7 @@
 ---    
   - name: Stop Application
     service: name=portal state=stopped
-    ignore_errors: no
+    ignore_errors: yes
 
   - name: Execute apt-get
     apt: name={{item}} state=present
