Update conf to use nodejs

--- a/deploy/roles/web/templates/portal.conf
+++ b/deploy/roles/web/templates/portal.conf
@@ -12,7 +12,7 @@ script
   touch /var/log/nodejs-{{env}}.log
   chown {{user}}:{{group}} /var/log/nodejs-{{env}}.log
   # recommended approach in case of su/sudo usage so that service does not fork
-  exec sudo -u {{user}} NODE_ENV={{env}} /usr/bin/node {{basedir}}{{project_name}}/{{appfile}} >> /var/log/node-{{env}}.log 2>&1
+  exec sudo -u {{user}} NODE_ENV={{env}} /usr/bin/nodejs {{basedir}}{{project_name}}/{{appfile}} >> /var/log/node-{{env}}.log 2>&1
 
 end script
  
