--- a/deploy/site.yaml
+++ b/deploy/site.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Deploy Node Application
   hosts: tag_class_{{env}}-portalserver
-  remote_user: {{remote_user}}
+  remote_user: "{{remote_user}}"
   sudo: yes
   roles : 
     - mongodb
